@@ -326,10 +326,12 @@ class ByteStreamToStreamResult(object):
             self._parse(packet, result)
         except ParseError as error:
             result.status(test_id="subunit.parser", eof=True,
-                file_name="Packet data", file_bytes=b''.join(packet))
+                file_name="Packet data", file_bytes=b''.join(packet),
+                mime_type="application/octet-stream")
             result.status(test_id="subunit.parser", test_status='fail',
                 eof=True, file_name="Parser Error",
-                file_bytes=(error.args[0]).encode('utf8'))
+                file_bytes=(error.args[0]).encode('utf8'),
+                mime_type="text/plain;charset=utf8")
 
     def _to_bytes(self, data, pos, length):
         """Return a slice of data from pos for length as bytes."""
